--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <p>Explora nuestra colección de juegos flash de zombies clásicos. Sumérgete en el mundo de los no muertos y lucha por tu supervivencia en estos emocionantes juegos de zombies. ¡Diviértete y revive la nostalgia de los juegos de la vieja escuela!</p>
         </section>
         <section class="game">
-            <img src="sources/flash_550714_card.png" alt="Road of the Dead">
+            <img src="sources/rotd.png" alt="Road of the Dead">
             <div class="game-info">
-                <div class="game-title">2. Road of the Dead 2</div>
+                <div class="game-title">2. Road of the Dead</div>
                 <div class="game-description">Road of the Dead es un emocionante juego de conducción en el que debes escapar de una ciudad invadida por zombies mientras evitas obstáculos y derrotas a los no muertos en tu camino.</div>
-                <a class="play-button" href="swf/game.swf" target="_blank">Jugar ahora</a>
+                <a class="play-button" href="https://www.newgrounds.com/portal/view/550714" target="_blank">Jugar ahora</a>
             </div>
         </section>
         <section class="game">
@@ -33,7 +33,7 @@
             <div class="game-info">
                 <div class="game-title">2. Road of the Dead 2</div>
                 <div class="game-description">Road of the Dead 2 es la emocionante secuela del juego original, en el que debes enfrentarte a más desafíos y zombies mientras intentas escapar de la ciudad.</div>
-                <a class="play-button" href="swf/rotd2.swf" target="_blank">Jugar ahora</a>
+                <a class="play-button" href="https://www.newgrounds.com/portal/view/624102" target="_blank">Jugar ahora</a>
             </div>
         </section>
         <section class="game">
@@ -41,7 +41,7 @@
             <div class="game-info">
                 <div class="game-title">3. Earn to Die</div>
                 <div class="game-description">Earn to Die es un juego de conducción y supervivencia en el que debes mejorar y personalizar tu vehículo para atravesar hordas de zombies y llegar a un lugar seguro.</div>
-                <a class="play-button" href="swf/earn_to_die_v1.swf" target="_blank">Jugar ahora</a>
+                <a class="play-button" href="https://www.minijuegos.com/juego/earn-to-die" target="_blank">Jugar ahora</a>
             </div>
         </section>
     </div>
