Cambio de Nombre
-

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header class="header-content">
-        <h1>RetroZombFlash</h1>
-        <p class="page-description">Revive memorias de los juegos flash de zombies que solías jugar.</p>
+        <h1>AfterFlash</h1>
+        <p class="page-description">Catálogo de juegos flash que solía jugar.</p>
         <div class="buttons">
             <a class="contact-button" href="https://github.com/Gordos-salames">Contacto</a>
             <a class= "fa fa-instagram" href="https://www.instagram.com/_cukx/">Redes Sociales</a>
@@ -21,7 +21,7 @@
     <div class="container">
         <section class="intro">
             <h2>Aquí podrás:</h2>
-            <p>Explorar nuestra colección de juegos flash de zombies clásicos. Sumérgete en el mundo de los no muertos y lucha por tu supervivencia en estos emocionantes juegos de zombies. ¡Diviértete y revive la nostalgia de los juegos de la vieja escuela!</p>
+            <p>Explorar nuestra colección de juegos flash, principalmente enfocada en juegos con temática zombie. Sumérgete en el mundo de los no muertos y lucha por tu supervivencia en estos emocionantes juegos. ¡Diviértete y revive la nostalgia de los juegos de la vieja escuela!</p>
         </section>
         <section class="game">
             <div class="game-title">1.  Road of the Dead</div>
