--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RetroZombFlash - Catálogo de Juegos de Zombies</title>
+    <title>AfterFlash - Catálogo de Juegos de Zombies</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="carrusel.js"></script>
+    <script src="carrusel-1.js"></script>
 
 </head>
 <body>
