--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
                 </a>
             </div>
         </section>
+    </div class="expMas">
+        <header class="expMasHeader">
+            <h1>Explora más juegos</h1>
+        <p class="p-Mas-header-1">The Last Stand.</p>
+        <img class="imagen" src="sources/tls.jpg" alt="The Last Stand-Franchise">
+        
+        </header>
+        <a class="btn-tls btn-link-tls" href="pag2/pag2.html">
+            Más información
+        </a>
+    <div>
+
     </div>
 </body>
 </html>
