--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>AfterFlash</h1>
         <p class="page-description">Catálogo de juegos flash que solía jugar.</p>
         <div class="buttons">
-            <a class="contact-button" href="contacto/contacto.html">Contacto</a>
+            <a class="contact-button" href="contacto/contacto2.html">Contacto</a>
             <a class= "fa fa-instagram" href="https://www.instagram.com/_cukx/">Mis redes Sociales</a>
           
         </div>
