--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
         <a class="btn-tls btn-link-tls" href="pag2/pag2.html">
             Más información
         </a>
+        
     <div>
-
+        <header class="gracias">
+            <h1>GRACIAS POR VISITARNOS!</h1>
+        </header>
     </div>
 </body>
+
 </html>
